fix: bit bigger gap

--- a/src/components/controls-and-info/controls/controls-component.module.scss
+++ b/src/components/controls-and-info/controls/controls-component.module.scss
@@ -64,7 +64,7 @@
 
 .toolControls {
   @extend %gridCentered;
-  gap: 0.5rem;
+  gap: 0.75rem;
 
   button {
     display: grid;
